# grpc-minimal

./: .gitignore  protodep.toml  pyproject.toml
proto/: greeting.proto
src/: server.py
src/services/: greeting.py
